<resources>
    <string name="app_name">Flutter</string>
    <string name="main_activity_button">Pengingat</string>

    <!-- MainActivity -->
    <string name="back_button">Tombol Kembali</string>
    <string name="title_reminder">Atur Pengingat</string>

    <!-- HomeReminder -->
    <string name="toothbrush">Sikat Gigi</string>
    <string name="total_toothbrush_reminder">0</string>

    <string name="reminder_medicine">Minum Obat</string>
    <string name="total_reminder_medicine">0</string>

    <string name="reminder_clinic">Klinik</string>
    <string name="total_reminder_clinic">0</string>

    <string name="reminder">Tidak ada Pengingat</string>
    <string name="reminder_button">Tambahken Pengingat</string>

    <!-- ItemReminder -->
    <string name="name_reminder">Sikat Gigi</string>
    <string name="time_reminder">07.00</string>
    <string name="select_category">Pilih Kategori</string>
    <string name="popup_button">Simpan</string>
    <string name="menu_popup">Menu Text</string>
    <string name="reminder_toothbrush">Pengingat Sikat Gigi</string>

    <!--  Popup Menu Repeat  -->
    <string name="repeat_day">Setiap Hari</string>
    <string name="repeat_week">Setiap Minggu</string>
    <string name="repeat_month">Setiap Bulan</string>
    <string name="repeat_year">Setiap Tahun</string>
</resources>